# openbim-dl-runtime-CLI-

./: README.md  pyproject.toml
docs/architecture/: runtime-v0.2-design.md
docs/diagrams/: runtime-architecture.mmd
examples/: minimal.obimdl
openbimdl/: __init__.py  ast.py  cli.py  evaluator.py  exporter.py  graph.py  ifc_loader.py  parser.py  runner.py  typecheck.py
