[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbimdl"
version = "0.2.0"
description = "Reference CLI runtime for OpenBIM Data Language (OpenBIM-DL)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sebastián Manríquez" }
]
keywords = ["BIM", "IFC", "openBIM", "dataset", "machine learning", "ETL", "graph"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "ifcopenshell>=0.7.0",
  "lark>=1.1.9",
  "pyarrow>=14.0.0",
  "orjson>=3.9.15",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "types-setuptools",
]

# This defines the CLI command: `openbimdl`
[project.scripts]
openbimdl = "openbimdl.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
